...
        enabled = enabled,
        singleLine = false,
        keyboardOptions = KeyboardOptions(
            capitalization = KeyboardCapitalization.Sentences,
            keyboardType = KeyboardType.Text
        ),
        modifier = Modifier.testTag("add_edit_quote_text"),
        minLines = 3,
        maxLines = 5
    )
}

@Composable
...
        enabled = enabled,
        singleLine = true,
        keyboardOptions = KeyboardOptions(
            capitalization = KeyboardCapitalization.Words,
            keyboardType = KeyboardType.Text
        ),
        modifier = Modifier.testTag("add_edit_author_text"),
    )
}

@Composable
private fun EditorTextField(
    label: String,
...
